added: logo, updated some documents, added some content

--- a/book/decisions/decisions.html
+++ b/book/decisions/decisions.html
@@ -177,8 +177,8 @@
 <p>In addition to the conceptual decisions, some other design decisions are necessary to achieve the goals we set out for Disolv.
 These are discussed in this section.</p>
 <ul>
-<li><a href="./decisions/software.html">Software</a></li>
-<li><a href="./decisions/architecture.html">Architecture</a></li>
+<li><a href="./software.html">Software</a></li>
+<li><a href="./architecture.html">Architecture</a></li>
 </ul>
 
                     </main>
