--- a/book/design/design.html
+++ b/book/design/design.html
@@ -193,11 +193,11 @@ Hence, Disolv conceptually looks as shown below:</p>
 <p>How we reach from the VANET simulator to ITS simulator is the main focus of this section.
 Several design aspects are incorporated to achieve this and we will look at them in detail.</p>
 <ul>
-<li><a href="./design/mobility.html">Mobility</a></li>
-<li><a href="./design/links.html">Links</a></li>
-<li><a href="./design/streams.html">Streams</a></li>
-<li><a href="./design/messages.html">Messages</a></li>
-<li><a href="./design/discrete.html">Discrete-time</a></li>
+<li><a href="./mobility.html">Mobility</a></li>
+<li><a href="./links.html">Links</a></li>
+<li><a href="./streams.html">Streams</a></li>
+<li><a href="./messages.html">Messages</a></li>
+<li><a href="./discrete.html">Discrete-time</a></li>
 </ul>
 <blockquote>
 <p><em>The details about the choices and their impact on the simulation is compared in the <a href="https://doi.org/10.1145/3615979.3656062">Disolv introductory article</a> published at PADS Conference, 2024.</em></p>
