--- a/book/design/links.html
+++ b/book/design/links.html
@@ -181,8 +181,31 @@ Because of the motion of the agents, this calculation is essential at each time 
 A significant time of the simulation is spent in this operation when the scale of the simulation is extremely large.</p>
 <p>Disolv addresses the issue by allowing an input of neighbour information.
 Similar to vehicular positions, the data for each agent and its neighbours can be fed as an input to the simulation.
-For the convenience of the users, Disolv comes with an executable that enables preparation of this file.
+For the convenience of the users, Disolv comes with an <a href="../execs/links.html">executable</a> that enables preparation of this file.
 This is a one-time step performed for each simulation and is required whenever there is a change in the positions file.</p>
+<p>Links are calculated between two classes of agents.
+The first class of the agent is the source with respect to which the second class agents are assigned as neighbours.
+There are several types of links that can be calculated:</p>
+<h3 id="static"><a class="header" href="#static">Static</a></h3>
+<p>If the source and target agent classes are static (RSUs, Edge Servers), then the links need not be calculated for every time step.
+In such cases, only the links at time step 0 are calculated.</p>
+<h3 id="dynamic"><a class="header" href="#dynamic">Dynamic</a></h3>
+<p>This will calculate links between source and target for all the time step.
+This is required when one of the agent classes are moving (vehicles, drones).</p>
+<h3 id="unicast"><a class="header" href="#unicast">Unicast</a></h3>
+<p>If a source agent can talk to only one agent of the target class at each time step, then such links must be calculated using Unicast method.
+Depending on the choice, user can assign the nearest target agent.</p>
+<h3 id="circular"><a class="header" href="#circular">Circular</a></h3>
+<p>This gives all the target agents around a given source agent at each time step.
+This is similar to a broadcast.</p>
+<h3 id="extensions"><a class="header" href="#extensions">Extensions</a></h3>
+<p>Further models can also be easily added for calculating the links.</p>
+<h2 id="real-world-traces"><a class="header" href="#real-world-traces">Real-world Traces</a></h2>
+<p>Any real-world traces can also be provided.
+For instance, an ns-3 scenario can be used to generate the links data.
+Whenever, there was a packet failure, we can assign no link in this case.
+What this enables is a realistic communication and vehicular scenario, on top of which other planning applications can be evaluated.
+In other words, disolv can be used a simulation replay tool.</p>
 
                     </main>
 
