--- a/book/index.html
+++ b/book/index.html
@@ -173,11 +173,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="disolv"><a class="header" href="#disolv">Disolv</a></h1>
+                        <p align="center">
+    <img style="max-width: 65%; max-height: 40%;" src="./resources/images/intro/disolv_logo.svg"
+</p>
 <p>Disolv stands for Dataflow-centric Integrated Simulator Of Large-scale VANETs.
 Disolv is implemented in Rust to enable large scale simulation studies of connected traffic applications.
 This documentation contains the description and the design of the simulator.</p>
-<p>Source code is available <a href="https://github.com/nagacharan-tangirala/disolv">here</a></p>
+<p>The code for the simulator is <a href="https://github.com/nagacharan-tangirala/disolv">available.</a></p>
 
                     </main>
 
