--- a/book/design/messages.html
+++ b/book/design/messages.html
@@ -174,6 +174,49 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="messages"><a class="header" href="#messages">Messages</a></h1>
+<p>Any realistic VANET simulator represents the interactions through packets.
+This is required to also model the failures due to the network resource constraints.
+Since we are only modeling interactions, packet-level modelling is not necessary.
+Instead, we model the interactions using a compact structure called Message.</p>
+<p>Message is built mainly with the metadata regarding the information that is transmitted.
+It contains the statistic such as size, counts, type regarding the data.
+Although this leads to unrealistic network, application studies that are not focussed on these aspects can reasonably benefit from this simplification.
+Any forwarded data from the downstream is also aggregated and forwarded to the upstream.</p>
+<p>For instance, consider the scenario where vehicles are uploading images to the RSU.
+RSUs are all connected to a central entity that is responsible to collect the images from the vehicles.
+Disolv can model this scenario.
+Vehicles can upload their data to the nearest RSU as they travel along the network.
+RSUs collect all the data that the vehicles uploaded into a single message and forward that to the controller.
+If we modelled this in the form of packets, we need too many packet instances to represent the interaction.
+Instead, we represent all of that with one single message.</p>
+<h3 id="message-structure"><a class="header" href="#message-structure">Message structure</a></h3>
+<p>One message is exchanged between a source and target agent.
+It contains the following information:</p>
+<pre><code>Message = {
+    message_type: Enum,
+    message_units: List,
+    gathered_units: List,
+    metadata: Struct,
+    actions: List,
+}
+</code></pre>
+<h4 id="message-type"><a class="header" href="#message-type">Message Type</a></h4>
+<p>Indicates the message type that is being sent.</p>
+<h4 id="message-units"><a class="header" href="#message-units">Message Units</a></h4>
+<p>This is an individual unit of a message that needs to be transmitted.
+Think of it as a unit of application data.
+Hence, this is a list to support scenarios where multiple applications want to communicate (voice, data, video).</p>
+<h4 id="gathered-units"><a class="header" href="#gathered-units">Gathered Units</a></h4>
+<p>These are all the application data that were forwarded by the agents in the upstream/downstream.</p>
+<h4 id="metadata"><a class="header" href="#metadata">Metadata</a></h4>
+<p>This contains all the necessary statistics of the message, including size, counts, selected link etc.
+The metadata is updated based on the message units that are supposted to be followed to the target.</p>
+<h4 id="actions"><a class="header" href="#actions">Actions</a></h4>
+<p>Actions are integral to the interactions between the agents.
+Each agent can receive either one or more messages from other agents.
+What to do with each individual message unit is indicated by the action.
+For instance, we can ask an agent to consume all <strong>image</strong> type messages but forward all <strong>video</strong> message types.
+This is entirely configurable by the user.</p>
 
                     </main>
 
