--- a/book/design/streams.html
+++ b/book/design/streams.html
@@ -173,7 +173,20 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="streams"><a class="header" href="#streams">Streams</a></h1>
+                        <h1 id="streaming"><a class="header" href="#streaming">Streaming</a></h1>
+<p>As we saw in the <a href="./mobility.html">mobility</a> and <a href="./links.html">links</a> sections, disolv needs several input files for a simulation.
+Because of the large-scale support goals, the size of the individual files can be significantly large.
+Mobility trace files for a city like Cologne take 20GB.
+If we add three to five different link files (vehicle-vehicle, vehicle-rsu, rsu-vehicle), then the input size is enormous.
+On the output side, such large scenarios also generate significant data.
+This can prove to be detrimental both for the performance as well as the memory.</p>
+<p>Disolv is designed to overcome this issue through data streaming abilities.
+Both the input and output files can be streamed at regular intervals of configurable time steps.
+Input and output are handled in the form of chunks.
+This solves the memory issues as the amount of data to be kept in the memory is only one chunk of the entire simulation duration.
+This is similar to digital twins.</p>
+<p>Parquet files are used for their robust and performant behavior.
+Disolv can be extended to support any file format as requried by the user.</p>
 
                     </main>
 
